--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@
 # APP
 #--------------------------------------------------------------------
 
- app.baseURL = 'http://localhost:80/SWAD25/CI4-MyBooks-Customer/public/'
+ app.baseURL = 'http://localhost:80/SecWebAssProj2/public/'
  
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
@@ -32,9 +32,9 @@
 #--------------------------------------------------------------------
 
  database.default.hostname = localhost
- database.default.database = mybooks
- database.default.username = sd3MyBooks
- database.default.password = pass
+ database.default.database = adaredesigngallery
+ database.default.username = root
+ database.default.password =
  database.default.DBDriver = MySQLi
  database.default.DBPrefix =
  database.default.port = 3306
