--- a/.env
+++ b/.env
@@ -11,6 +11,12 @@
 #--------------------------------------------------------------------
 
 #--------------------------------------------------------------------
+# STRIPE
+#--------------------------------------------------------------------
+stripe.key = 'pk_test_XXXXXX'
+stripe.secret = 'sk_test_XXXXXX'
+
+#--------------------------------------------------------------------
 # ENVIRONMENT
 #--------------------------------------------------------------------
 
